Fixup Gradle deprecation warnings, fix unchecked warnings.